samples/_failures_safe/1761296914_65bc66_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2c419eec.c: In function ‘main’:
./samples/SAFE/__tmp_2c419eec.c:152:20: error: missing terminating " character
  152 |             printf("  Ratio: N/A (
      |                    ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_2c419eec.c:152:13: error: expected expression at end of input
  152 |             printf("  Ratio: N/A (
      |             ^~~~~~
./samples/SAFE/__tmp_2c419eec.c:152:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2c419eec.c:152:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2c419eec.c:152:13: error: expected declaration or statement at end of input
